k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: fennel-api
  labels:
    name: fennel-api
    environment: production
    app.kubernetes.io/name: fennel-service-api
